--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Cuentahabiente/build/
 /Cuentahabiente/nbproject/private/
+/Tareas/Cuentahabiente/build/
+/Tareas/Cuentahabiente/nbproject/private/
