--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Cuentahabiente/nbproject/private/
 /Tareas/Cuentahabiente/build/
 /Tareas/Cuentahabiente/nbproject/private/
+/build/
+/nbproject/private/
