--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /nbproject/private/
 /ico.fes.swing/build/
 /ico.fes.swing/nbproject/private/
+/CifradoCesar/build/
+/CifradoCesar/nbproject/private/
